--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ h6 {
   color: white;
 }
 .card-position {
-  position: relative;
+  /* position: relative; */
   margin-bottom: -75px;
   padding-top: 10px;
   padding-bottom: 100px;
